[package]
name = "audiohit"
version = "0.4.0"
authors = ["Icaro Ferre"]
edition = "2018"



[dependencies]
ot_utils = {github = "https://github.com/icaroferre/ot_utils", version = "0.1.4" }
decibel = {github = "https://github.com/Digipom/decibel"}
hound = {github = "https://github.com/ruuda/hound/"}
argparse = {github = "http://github.com/tailhook/rust-argparse"}
stopwatch = {github = "https://github.com/ellisonch/rust-stopwatch"}
rand = {github = "https://github.com/rust-random/rand"}